# ProjectVoicecutter

./: .gitignore  README  allowedCommands.py  commandMethods.py  customCommands.json  image_matcher.py  main.py  metadata_parser.py  mouse_tracker.py  premiere_calibration.py  premiere_writer.py  pyproject.toml  search_calibration.py  test_commands.py  test_writer.py  triggerCommands.json  voice_ui.py
customScripts/: TranscriptSearch.py  sync_clips.py  sync_clips_manual.py
shot_configs/: default.json  example_posthaus.json
tvh/: __init__.py  audio.py  clipboard.py  config.py  misc.py  panel_focus.py  playback.py  preset_applier.py  timeline.py  transform.py  utils.py  vfx_scrubber.py
